UT refactor